tests/snapshots/italics/italics_01.snap
---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  Slash: "/" [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  TextChunk [ offsets: 1, position: ( line: 0, col: 3 ) ] ]
    Word: "an" [ offsets: 1, position: ( line: 0, col: 3 ) ] ]
    WhiteSpace: " " [ offsets: 3, position: ( line: 0, col: 4 ) ] ]
    Word: "italics" [ offsets: 4, position: ( line: 0, col: 11 ) ] ]
    WhiteSpace: " " [ offsets: 11, position: ( line: 0, col: 12 ) ] ]
    Word: "text" [ offsets: 12, position: ( line: 0, col: 16 ) ] ]
    WhiteSpace: " " [ offsets: 16, position: ( line: 0, col: 17 ) ] ]
    Word: "chunk" [ offsets: 17, position: ( line: 0, col: 22 ) ] ]
  Slash: "/" [ offsets: 22, position: ( line: 0, col: 23 ) ] ]
