tests/snapshots/italics/italics_02.snap
---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Error: "/" (unclosed delimiter)
  TextChunk [ offsets: 1, position: ( line: 0, col: 3 ) ] ]
    Word: "an" [ offsets: 1, position: ( line: 0, col: 3 ) ] ]
    WhiteSpace: " " [ offsets: 3, position: ( line: 0, col: 4 ) ] ]
    Word: "italics" [ offsets: 4, position: ( line: 0, col: 11 ) ] ]
    WhiteSpace: " " [ offsets: 11, position: ( line: 0, col: 12 ) ] ]
    Word: "text" [ offsets: 12, position: ( line: 0, col: 16 ) ] ]
    WhiteSpace: " " [ offsets: 16, position: ( line: 0, col: 17 ) ] ]
    Word: "chunk" [ offsets: 17, position: ( line: 0, col: 22 ) ] ]
    WhiteSpace: " " [ offsets: 22, position: ( line: 0, col: 23 ) ] ]
    Word: "blah" [ offsets: 23, position: ( line: 0, col: 27 ) ] ]
    WhiteSpace: " " [ offsets: 27, position: ( line: 0, col: 28 ) ] ]
    Word: "blah" [ offsets: 28, position: ( line: 0, col: 32 ) ] ]
    WhiteSpace: " " [ offsets: 32, position: ( line: 0, col: 33 ) ] ]
    Word: "blah" [ offsets: 33, position: ( line: 0, col: 37 ) ] ]
