tests/snapshots/italics/italics_03.snap
---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  Slash: "/" [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  Error: " " (unexpected WhiteSpace)
  TextChunk [ offsets: 2, position: ( line: 0, col: 4 ) ] ]
    Word: "an" [ offsets: 2, position: ( line: 0, col: 4 ) ] ]
    WhiteSpace: " " [ offsets: 4, position: ( line: 0, col: 5 ) ] ]
    Word: "italics" [ offsets: 5, position: ( line: 0, col: 12 ) ] ]
    WhiteSpace: " " [ offsets: 12, position: ( line: 0, col: 13 ) ] ]
    Word: "text" [ offsets: 13, position: ( line: 0, col: 17 ) ] ]
    WhiteSpace: " " [ offsets: 17, position: ( line: 0, col: 18 ) ] ]
    Word: "chunk" [ offsets: 18, position: ( line: 0, col: 23 ) ] ]
  Slash: "/" [ offsets: 23, position: ( line: 0, col: 24 ) ] ]
