tests/snapshots/italics/italics_06.snap
---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  Slash: "/" [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  TextChunk [ offsets: 1, position: ( line: 0, col: 3 ) ] ]
    Word: "an" [ offsets: 1, position: ( line: 0, col: 3 ) ] ]
    WhiteSpace: " " [ offsets: 3, position: ( line: 0, col: 4 ) ] ]
    Word: "italics" [ offsets: 4, position: ( line: 0, col: 11 ) ] ]
    WhiteSpace: " " [ offsets: 11, position: ( line: 0, col: 12 ) ] ]
    Error: "\n" (unexpected LineEnding)
    WhiteSpace: " " [ offsets: 13, position: ( line: 0, col: 14 ) ] ]
    Word: "text" [ offsets: 14, position: ( line: 0, col: 18 ) ] ]
    WhiteSpace: " " [ offsets: 18, position: ( line: 0, col: 19 ) ] ]
    Word: "chunk" [ offsets: 19, position: ( line: 0, col: 24 ) ] ]
  Slash: "/" [ offsets: 24, position: ( line: 0, col: 25 ) ] ]
