tests/snapshots/italics/italics_09.snap
---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Slash: "/" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  TextChunk [ offsets: 1, position: ( line: 0, col: 1 ) ] ]
    Word: "an" [ offsets: 1, position: ( line: 0, col: 1 ) ] ]
    WhiteSpace: " " [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Word: "italics" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    WhiteSpace: " " [ offsets: 11, position: ( line: 0, col: 11 ) ] ]
    Word: "text" [ offsets: 12, position: ( line: 0, col: 12 ) ] ]
    WhiteSpace: " " [ offsets: 16, position: ( line: 0, col: 16 ) ] ]
    Word: "chunk" [ offsets: 17, position: ( line: 0, col: 17 ) ] ]
    WhiteSpace: " " [ offsets: 22, position: ( line: 0, col: 22 ) ] ]
    Word: "and" [ offsets: 23, position: ( line: 0, col: 23 ) ] ]
    WhiteSpace: " " [ offsets: 26, position: ( line: 0, col: 26 ) ] ]
    Word: "it" [ offsets: 27, position: ( line: 0, col: 27 ) ] ]
    WhiteSpace: " " [ offsets: 29, position: ( line: 0, col: 29 ) ] ]
    Word: "have" [ offsets: 30, position: ( line: 0, col: 30 ) ] ]
    WhiteSpace: " " [ offsets: 34, position: ( line: 0, col: 34 ) ] ]
    Word: "a" [ offsets: 35, position: ( line: 0, col: 35 ) ] ]
    WhiteSpace: " " [ offsets: 36, position: ( line: 0, col: 36 ) ] ]
  Verbatim [ offsets: 37, position: ( line: 0, col: 37 ) ] ]
    Pipe: "|" [ offsets: 37, position: ( line: 0, col: 37 ) ] ]
    TextChunk [ offsets: 38, position: ( line: 0, col: 38 ) ] ]
      WhiteSpace: " " [ offsets: 38, position: ( line: 0, col: 38 ) ] ]
      Word: "verbatim" [ offsets: 39, position: ( line: 0, col: 39 ) ] ]
      WhiteSpace: " " [ offsets: 47, position: ( line: 0, col: 47 ) ] ]
    Pipe: "|" [ offsets: 48, position: ( line: 0, col: 48 ) ] ]
  TextChunk [ offsets: 49, position: ( line: 0, col: 49 ) ] ]
    WhiteSpace: " " [ offsets: 49, position: ( line: 0, col: 49 ) ] ]
    Word: "chunk" [ offsets: 50, position: ( line: 0, col: 50 ) ] ]
    WhiteSpace: " " [ offsets: 55, position: ( line: 0, col: 55 ) ] ]
    Word: "in" [ offsets: 56, position: ( line: 0, col: 56 ) ] ]
    WhiteSpace: " " [ offsets: 58, position: ( line: 0, col: 58 ) ] ]
    Word: "it" [ offsets: 59, position: ( line: 0, col: 59 ) ] ]
    WhiteSpace: " " [ offsets: 61, position: ( line: 0, col: 61 ) ] ]
    Colon: ":" [ offsets: 62, position: ( line: 0, col: 62 ) ] ]
    RParen: ")" [ offsets: 63, position: ( line: 0, col: 63 ) ] ]
  Slash: "/" [ offsets: 64, position: ( line: 0, col: 64 ) ] ]
