tests/snapshots/italics/italics_10.snap
---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  Slash: "/" [ offsets: 0, position: ( line: 0, col: 1 ) ] ]
  Error: "/" (unexpected /)
  TextChunk [ offsets: 2, position: ( line: 0, col: 6 ) ] ]
    Word: "this" [ offsets: 2, position: ( line: 0, col: 6 ) ] ]
  Error: "/" (unexpected /)
  Slash: "/" [ offsets: 7, position: ( line: 0, col: 8 ) ] ]
